@@ -87,6 +87,7 @@ setting <TT>type()</TT> to one of the following values:</P>
 </UL>
 </TD><TD align="left" valign="top">
 <UL>
+<LI><A href="#Fl_Input_.shortcut">shortcut</A></LI>
 <LI><A href="#Fl_Input_.undo">undo</A></LI>
 <LI><A href="#Fl_Input_.up_down_position">up_down_position</A></LI>
 <LI><A href="#Fl_Input_.wrap">wrap</A></LI>
@@ -254,6 +255,23 @@ information to the clipboard. This is used to make ^K work.
 <BR>void Fl_Input_::readonly(int)</A></H4>
 
 <P>Gets or sets the read-only state of the input field.
+
+<H4><A name="Fl_Input_.shortcut">ulong Fl_Input_::shortcut() const
+<BR> void Fl_Input_::shortcut(ulong key)</A></H4>
+ The first form returns the current shortcut key for the Input.
+<P>The second form sets the shortcut key to <TT>key</TT>. Setting this
+overrides the use of '&amp;' in the <TT>label()</TT>.  The value is a bitwise
+OR of a key and a set of shift flags, for example <CODE>FL_ALT | 'a'</CODE>
+, <CODE>FL_ALT | (FL_F + 10)</CODE>, or just <CODE>'a'</CODE>.  A value
+of 0 disables the shortcut. </P>
+<P>The key can be any value returned by <A href="Fl.html#Fl.event_key">
+<TT>Fl::event_key()</TT></A>, but will usually be an ASCII letter.  Use
+a lower-case letter unless you require the shift key to be held down. </P>
+<P>The shift flags can be any set of values accepted by <A href="Fl.html#Fl.event_state">
+<TT>Fl::event_state()</TT></A>.  If the bit is on that shift key must
+be pushed.  Meta, Alt, Ctrl, and Shift must be off if they are not in
+the shift flags (zero for the other bits indicates a &quot;don't care&quot;
+setting). </P>
 
 <H4><A name="Fl_Input_.wrap">int Fl_Input_::wrap() const
 <BR>void Fl_Input_::wrap(int)</A></H4>
